# near-admin-dev-deploy

./: Cargo.toml  deploy.sh
neardev/: dev-account  dev-account.env
src/: lib.rs
